tests/ui/generic-associated-types/issue-92033.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-92033.rs:20:28
   |
LL |     type TextureIter<'a> = std::option::IntoIter<&'a Texture>;
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'s` as defined here
  --> $DIR/issue-92033.rs:19:6
   |
LL | impl<'s> Surface for &'s Texture {
   |      ^^
note: but lifetime parameter must outlive the lifetime `'a` as defined here
  --> $DIR/issue-92033.rs:20:22
   |
LL |     type TextureIter<'a> = std::option::IntoIter<&'a Texture>;
   |                      ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
